# ComputeXml-platform

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  overview.md  run_all.bat
backend/: .env.example  package-lock.json  package.json
backend/src/: server.js
backend/src/middleware/: auth.js
backend/src/routes/: auth.routes.js  pipeline.routes.js
backend/src/services/: db.js  history.model.js  login.model.js  python.service.js  user.model.js
backend/test/: auth.routes.test.js
cpp_engine/: CMakeLists.txt
cpp_engine/include/: cublas_models.hpp  le.hpp  linear_cublas.hpp  linear_open.hpp  logistic_cublas.hpp  logistic_open.hpp  metric_linear.hpp  metric_logistic.hpp  ohe.hpp  openblas_models.hpp  parser.hpp
cpp_engine/src/: cublas_models.cpp  le.cpp  linear_cublas.cu  linear_open.cpp  logistic_cublas.cu  logistic_open.cpp  main.cpp  metric_linear.cpp  metric_logistic.cpp  ohe.cpp  openblas_models.cpp  parser.cpp
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: app.js  index.html  styles.css
frontend/src/: App.jsx  styles.css
frontend/src/lib/: api.js  csvUtils.js  session.js
frontend/src/pages/: LandingPage.jsx  LoginPage.jsx  ResultsPage.jsx  UploadPage.jsx
frontend/test/: csvUtils.test.js
grafana/provisioning/dashboards/: computex-dashboard.json  dashboard.yml
nginx/: nginx.conf
prometheus/: prometheus.yml
python_service/: Dockerfile  importtime.txt  requirements.txt
python_service/app/: config.py  main.py
python_service/routes/: routes.py
python_service/utils/: analyse_regression.py  build_bundle.py  cleaner.py  dao.py  engine.py  feature_bundle.py  fit_models.py  graphs.py  metrics.py  neccessity.py  normalize_tranform.py  training_frame.py
